--- a/_frontend/blocks/background-page-category/style.scss
+++ b/_frontend/blocks/background-page-category/style.scss
@@ -17,8 +17,7 @@
         width: 700px;
         height: 110px;
         transform: skewY(20deg);
-        background-color: #ffc928;
-        opacity: .2;
+        background-color: #fff6d3;
     }
     .block-left-middle {
         position: absolute;
@@ -28,8 +27,7 @@
         width: 250px;
         height: 170px;
         transform: skewY(20deg);
-        background-color: #ffc928;
-        opacity: .2;
+        background-color: #fff6d3;
     }
     .cheese-left {
         position: absolute;
@@ -48,8 +46,7 @@
         width: 1000px;
         height: 300px;
         transform: skewY(20deg);
-        background-color: #ffc928;
-        opacity: .2;
+        background-color: #fff6d3;
     }
     .block-right {
         position: absolute;
@@ -59,8 +56,7 @@
         width: 300px;
         height: 280px;
         transform: skewY(20deg);
-        background-color: #ffc928;
-        opacity: .2;
+        background-color: #fff6d3;
     }
     .cheese-right {
         position: absolute;
