--- a/_frontend/blocks/background-page-product/style.scss
+++ b/_frontend/blocks/background-page-product/style.scss
@@ -17,8 +17,7 @@
         width: 100%;
         height: 320px;
         transform: skewY(20deg);
-        background-color: #ffc928;
-        opacity: .2;
+        background-color: #fff6d3;
     }
     .block-left-middle {
         position: absolute;
@@ -28,8 +27,7 @@
         width: 390px;
         height: 110px;
         transform: skewY(20deg);
-        background-color: #ffc928;
-        opacity: .2;
+        background-color: #fff6d3;
     }
     .block-left-bottom {
         position: absolute;
@@ -39,8 +37,7 @@
         width: 100%;
         height: 600px;
         transform: skewY(20deg);
-        background-color: #ffc928;
-        opacity: .2;
+        background-color: #fff6d3;
     }
     .block-right {
         position: absolute;
@@ -50,8 +47,7 @@
         width: 350px;
         height: 190px;
         transform: skewY(20deg);
-        background-color: #ffc928;
-        opacity: .2;
+        background-color: #fff6d3;
     }
     .cheese-right {
         position: absolute;
