--- a/_frontend/blocks/background-page/style.scss
+++ b/_frontend/blocks/background-page/style.scss
@@ -137,8 +137,7 @@
             width: 100%;
             height: 30px;
             transform: skewY(20deg);
-            background-color: #ffc928;
-            opacity: .2;
+            background-color: #fff6d3;
         }
         &_about {
             position: absolute;
@@ -148,8 +147,7 @@
             width: 100%;
             height: 30px;
             transform: skewY(20deg);
-            background-color: #ffc928;
-            opacity: .2;
+            background-color: #fff6d3;
         }
         &_direction {
             position: absolute;
@@ -159,8 +157,7 @@
             width: 50%;
             height: 120px;
             transform: skewY(20deg);
-            background-color: #ffc928;
-            opacity: .2;
+            background-color: #fff6d3;
         }
         &_event {
             position: absolute;
@@ -170,8 +167,7 @@
             width: 33%;
             height: 120px;
             transform: skewY(20deg);
-            background-color: #ffc928;
-            opacity: .2;
+            background-color: #fff6d3;
         }
         &_exclusive {
             position: absolute;
@@ -181,8 +177,7 @@
             width: 34%;
             height: 105px;
             transform: skewY(20deg);
-            background-color: #ffc928;
-            opacity: .2;
+            background-color: #fff6d3;
         }
         &_recipe {
             position: absolute;
@@ -192,8 +187,7 @@
             width: 32%;
             height: 105px;
             transform: skewY(20deg);
-            background-color: #f6d34b;
-            opacity: .2;
+            background-color: #fff6d3;
         }
         &_one-recipe {
             position: absolute;
@@ -203,8 +197,7 @@
             width: 32%;
             height: 105px;
             transform: skewY(20deg);
-            background-color: #f6d34b;
-            opacity: .2;
+            background-color: #fff6d3;
         }
     }
     &__block-left-middle-top {
@@ -216,8 +209,7 @@
             width: 140px;
             height: 170px;
             transform: skewY(20deg);
-            background-color: #ffc928;
-            opacity: .2;
+            background-color: #fff6d3;
         }
     }
     &__block-left-middle {
@@ -229,8 +221,7 @@
             width: 140px;
             height: 170px;
             transform: skewY(20deg);
-            background-color: #ffc928;
-            opacity: .2;
+            background-color: #fff6d3;
         }
         &_about {
             position: absolute;
@@ -240,8 +231,7 @@
             width: 100%;
             height: 250px;
             transform: skewY(20deg);
-            background-color: #ffc928;
-            opacity: .2;
+            background-color: #fff6d3;
         }
         &_direction {
             position: absolute;
@@ -251,8 +241,7 @@
             width: 300px;
             height: 170px;
             transform: skewY(20deg);
-            background-color: #ffc928;
-            opacity: .2;
+            background-color: #fff6d3;
         }
         &_event {
             position: absolute;
@@ -262,8 +251,7 @@
             width: 270px;
             height: 170px;
             transform: skewY(20deg);
-            background-color: #ffc928;
-            opacity: .2;
+            background-color: #fff6d3;
         }
         &_exclusive {
             position: absolute;
@@ -273,8 +261,7 @@
             width: 270px;
             height: 180px;
             transform: skewY(20deg);
-            background-color: #ffc928;
-            opacity: .2;
+            background-color: #fff6d3;
         }
         &_recipe {
             position: absolute;
@@ -284,8 +271,7 @@
             width: 270px;
             height: 180px;
             transform: skewY(20deg);
-            background-color: #f6d34b;
-            opacity: .2;
+            background-color: #fff6d3;
         }
         &_one-recipe {
             position: absolute;
@@ -295,8 +281,7 @@
             width: 270px;
             height: 180px;
             transform: skewY(20deg);
-            background-color: #f6d34b;
-            opacity: .2;
+            background-color: #fff6d3;
         }
     }
     &__block-left-middle-bottom {
@@ -308,8 +293,7 @@
             width: 300px;
             height: 125px;
             transform: skewY(20deg);
-            background-color: #ffc928;
-            opacity: .2;
+            background-color: #fff6d3;
         }
     }
     &__block-left-bottom {
@@ -321,8 +305,7 @@
             width: 100%;
             height: 1153px;
             transform: skewY(20deg);
-            background-color: #ffc928;
-            opacity: .2;
+            background-color: #fff6d3;
         }
         &_direction {
             position: absolute;
@@ -332,8 +315,7 @@
             width: 100%;
             height: 400px;
             transform: skewY(20deg);
-            background-color: #ffc928;
-            opacity: .2;
+            background-color: #fff6d3;
         }
         &_event {
             position: absolute;
@@ -343,8 +325,7 @@
             width: 100%;
             height: 400px;
             transform: skewY(20deg);
-            background-color: #ffc928;
-            opacity: .2;
+            background-color: #fff6d3;
         }
     }
     &__block-right {
@@ -356,8 +337,7 @@
             width: 370px;
             height: 420px;
             transform: skewY(20deg);
-            background-color: #ffc928;
-            opacity: .2;
+            background-color: #fff6d3;
         }
         &-top {
             &_about {
@@ -368,8 +348,7 @@
                 width: 370px;
                 height: 420px;
                 transform: skewY(20deg);
-                background-color: #ffc928;
-                opacity: .2;
+                background-color: #fff6d3;
             }
             &_direction {
                 position: absolute;
@@ -379,8 +358,7 @@
                 width: 340px;
                 height: 270px;
                 transform: skewY(20deg);
-                background-color: #ffc928;
-                opacity: .2;
+                background-color: #fff6d3;
             }
             &_event {
                 position: absolute;
@@ -390,8 +368,7 @@
                 width: 310px;
                 height: 295px;
                 transform: skewY(20deg);
-                background-color: #ffc928;
-                opacity: .2;
+                background-color: #fff6d3;
             }
             &_exclusive {
                 position: absolute;
@@ -401,8 +378,7 @@
                 width: 310px;
                 height: 285px;
                 transform: skewY(20deg);
-                background-color: #ffc928;
-                opacity: .2;
+                background-color: #fff6d3;
             }
             &_recipe {
                 position: absolute;
@@ -412,8 +388,7 @@
                 width: 310px;
                 height: 285px;
                 transform: skewY(20deg);
-                background-color: #f6d34b;
-                opacity: .2;
+                background-color: #fff6d3;
             }
         }
         &-middle {
@@ -425,8 +400,7 @@
                 width: 950px;
                 height: 600px;
                 transform: skewY(20deg);
-                background-color: #ffc928;
-                opacity: .2;
+                background-color: #fff6d3;
             }
         }
         &-bottom {
@@ -438,8 +412,7 @@
                 width: 300px;
                 height: 60px;
                 transform: skewY(20deg);
-                background-color: #ffc928;
-                opacity: .2;
+                background-color: #fff6d3;
             }
         }
     }
