--- a/_frontend/blocks/filter/style.scss
+++ b/_frontend/blocks/filter/style.scss
@@ -3,20 +3,25 @@
         margin-bottom: 30px;
     }
     &__title {
-        font-size: 20px;
-        line-height: 22px;
+        font-size: 24px;
+        line-height: 24px;
+        letter-spacing: 0.24px;
         font-weight: bold;
         padding-right: 40px;
         margin-bottom: 20px;
     }
     &__item {
+        font-size: 18px;
         &__name {
             margin-top: 15px;
-            font-size: 15px;
             line-height: 18px;
             font-weight: bold;
         }
-        &__secect {}
+        &__secect {
+            .cs-placeholder {
+                font-size: 18px;
+            }
+        }
     }
     &__button {
         margin-top: 20px;
