--- a/_frontend/_engine/blocks/select.scss
+++ b/_frontend/_engine/blocks/select.scss
@@ -1,137 +1,143 @@
 /* Default custom select styles */
+
 div.cs-select {
-  display: inline-block;
-  vertical-align: middle;
-  position: relative;
-  text-align: left;
-  background: transparent;
-  border-bottom: 2px solid #ffc928;
-  z-index: 100;
-  width: 100%;
-  max-width: 500px;
-  -webkit-touch-callout: none;
-  -webkit-user-select: none;
-  -khtml-user-select: none;
-  -moz-user-select: none;
-  -ms-user-select: none;
-  user-select: none;
-  &.cs-active ,& .cs-options{
-    background: #fff;
-    box-shadow: 0 0 16px 2px rgba(68, 68, 68, 0.25);
-    height: auto;
-    border-radius: 5px;
-    border-bottom: 0;
-    z-index: 200;
-  }
-  &.cs-active{
-    & .cs-placeholder{
-      position: absolute;
-      z-index: 201;
-      width: 100%;
-      padding-left: 8px;
-      font-size: 14px;
-      line-height: 1.3em;
+    display: inline-block;
+    vertical-align: middle;
+    position: relative;
+    text-align: left;
+    background: transparent;
+    border-bottom: 2px solid #ffc928;
+    z-index: 100;
+    width: 100%;
+    max-width: 500px;
+    -webkit-touch-callout: none;
+    -webkit-user-select: none;
+    -khtml-user-select: none;
+    -moz-user-select: none;
+    -ms-user-select: none;
+    user-select: none;
+    &.cs-active,
+    & .cs-options {
+        background: #fff;
+        box-shadow: 0 0 16px 2px rgba(68, 68, 68, 0.25);
+        height: auto;
+        border-radius: 5px;
+        border-bottom: 0;
+        z-index: 200;
     }
-    & .cs-options{
-      padding-top: 35px;
+    &.cs-active {
+        & .cs-placeholder {
+            position: absolute;
+            z-index: 201;
+            width: 100%;
+            padding-left: 8px;
+            font-size: 14px;
+            line-height: 1.3em;
+        }
+        & .cs-options {
+            padding-top: 35px;
+        }
     }
-  }
-  & .cs-placeholder {
-    font-size: 13px;
-    line-height: 1px;
-  }
+    & .cs-placeholder {
+        font-size: 18px;
+        line-height: 1px;
+    }
 
 }
 
 div.cs-select:focus {
-  outline: none; /* For better accessibility add a style for this in your skin */
+    outline: none;
+    /* For better accessibility add a style for this in your skin */
 }
 
 .cs-select select {
-  display: none;
+    display: none;
 }
 
 .cs-select span {
-  display: block;
-  position: relative;
-  cursor: pointer;
-  padding: 8px 8px 8px 0;
-  white-space: nowrap;
-  overflow: hidden;
-  text-overflow: ellipsis;
+    display: block;
+    position: relative;
+    cursor: pointer;
+    padding: 8px 8px 8px 0;
+    white-space: nowrap;
+    overflow: hidden;
+    text-overflow: ellipsis;
 }
 
 
 /* Placeholder and selected option */
+
 .cs-select > span {
-  padding-right: 3em;
+    padding-right: 3em;
 }
 
 .cs-select > span::after,
 .cs-select .cs-selected span::after {
-  speak: none;
-  position: absolute;
-  top: 50%;
-  -webkit-transform: translateY(-50%);
-  transform: translateY(-50%);
-  -webkit-font-smoothing: antialiased;
-  -moz-osx-font-smoothing: grayscale;
+    speak: none;
+    position: absolute;
+    top: 50%;
+    -webkit-transform: translateY(-50%);
+    transform: translateY(-50%);
+    -webkit-font-smoothing: antialiased;
+    -moz-osx-font-smoothing: grayscale;
 }
 
 .cs-select > span::after {
-  content: '\25BE';
-  right: 1em;
+    content: '\25BE';
+    right: 1em;
 }
 
 .cs-select .cs-selected span::after {
-  content: '\2713';
-  margin-left: 1em;
+    content: '\2713';
+    margin-left: 1em;
 }
 
 .cs-select.cs-active > span::after {
-  -webkit-transform: translateY(-50%) rotate(180deg);
-  transform: translateY(-50%) rotate(180deg);
+    -webkit-transform: translateY(-50%) rotate(180deg);
+    transform: translateY(-50%) rotate(180deg);
 }
 
 /* Options */
-.cs-select .cs-options {
-  position: absolute;
-  overflow: hidden;
-  width: 100%;
-  background: #fff;
-  visibility: hidden;
 
-  span {
-    &:hover {
-      background: #ffc928;
+.cs-select .cs-options {
+    position: absolute;
+    overflow: hidden;
+    width: 100%;
+    background: #fff;
+    visibility: hidden;
+
+    span {
+        &:hover {
+            background: #ffc928;
+        }
     }
-  }
 }
 
 .cs-select.cs-active .cs-options {
-  visibility: visible;
+    visibility: visible;
 }
 
 .cs-select ul {
-  list-style: none;
-  margin: 0;
-  padding: 0;
-  width: 100%;
+    list-style: none;
+    margin: 0;
+    padding: 0;
+    width: 100%;
 }
 
 .cs-select ul span {
-  padding: 8px;
+    padding: 8px;
 }
 
 .cs-select ul li.cs-focus span {
-  background-color: #ddd;
+    background-color: #ddd;
 }
 
 /* Optgroup and optgroup label */
+
 .cs-select li.cs-optgroup ul {
-  padding-left: 1em;
+    padding-left: 1em;
 }
 
 .cs-select li.cs-optgroup > span {
-  cursor: default;
+    cursor: default;
 }
