--- a/_frontend/blocks/block-product-img/style.scss
+++ b/_frontend/blocks/block-product-img/style.scss
@@ -43,23 +43,49 @@
             }
         }
         .arrows--next {
-            right: 2px;
+            right: -2px;
         }
         .arrows--prev {
-            left: 0px;
+            left: -5px;
         }
 
         .arrows {
+            fill: #fff;
+            z-index: 1;
+            &:hover {
+                fill: #ffc928;
+            }
+        }
+        &:before {
+            content: "";
             width: 32px;
             height: 100%;
             background-color: #000000;
-            opacity: 0.2;
+            opacity: 0.1;
             position: absolute;
             top: 0;
             bottom: 0;
+            left: 0;
             cursor: pointer;
             transform: none;
             z-index: 1;
+            border-top-left-radius: 10px;
+            border-bottom-left-radius: 10px;
+        }
+        &:after {
+            content: "";
+            width: 32px;
+            height: 100%;
+            background-color: #000000;
+            opacity: 0.1;
+            position: absolute;
+            top: 0;
+            bottom: 0;
+            right: 3px;
+            cursor: pointer;
+            transform: none;
+            border-top-right-radius: 10px;
+            border-bottom-right-radius: 10px;
         }
     }
     &__description {
