--- a/_frontend/blocks/slider/style.scss
+++ b/_frontend/blocks/slider/style.scss
@@ -35,8 +35,8 @@
         }
 
         &__text {
-            max-width: 380px;
-            padding: 40px;
+            max-width: 450px;
+            padding: 30px 30px 20px 40px;
             border: 10px solid #ffc928;
             border-radius: 10px;
             color: #fff;
@@ -46,14 +46,17 @@
             }
 
             p {
-                font-size: 15px;
+                font-size: 20px;
+                line-height: 28px;
+                letter-spacing: 0.2px;
             }
             span {
                 display: block;
-                margin-bottom: 10px;
-                font-size: 21px;
+                margin-bottom: 20px;
+                font-size: 24px;
                 line-height: 28px;
-                font-weight: 800;
+                font-weight: 700;
+                letter-spacing: 0.24px;
             }
             &_font {
                 padding: 25px 20px 30px 25px;
