--- a/_frontend/blocks/trade-marks/style.scss
+++ b/_frontend/blocks/trade-marks/style.scss
@@ -13,16 +13,17 @@
             width: 50%;
         }
         &__card {
-            height: 125px;
+            height: 180px;
             position: relative;
             &__img {
-                height: 90px;
+                height: 150px;
                 position: relative;
                 img {
                     position: absolute;
                     top: 50%;
                     left: 50%;
                     transform: translate(-50%, -50%);
+                    width: 65%;
                 }
             }
             &__title {
