--- a/css/style.css
+++ b/css/style.css
@@ -953,7 +953,8 @@ div.cs-select {
   -moz-user-select: none;
   -ms-user-select: none;
   user-select: none; }
-  div.cs-select.cs-active, div.cs-select .cs-options {
+  div.cs-select.cs-active,
+  div.cs-select .cs-options {
     background: #fff;
     -webkit-box-shadow: 0 0 16px 2px rgba(68, 68, 68, 0.25);
             box-shadow: 0 0 16px 2px rgba(68, 68, 68, 0.25);
@@ -972,7 +973,7 @@ div.cs-select {
   div.cs-select.cs-active .cs-options {
     padding-top: 35px; }
   div.cs-select .cs-placeholder {
-    font-size: 13px;
+    font-size: 18px;
     line-height: 1px; }
 
 div.cs-select:focus {
@@ -1369,7 +1370,7 @@ input[type="text"]:focus {
   line-height: 53px;
   margin-bottom: 20px;
   text-align: center;
-  color: #f6cc49; }
+  color: #ffc928; }
 
 .h1-product-page {
   margin: 15px auto 34px;
@@ -1379,7 +1380,7 @@ input[type="text"]:focus {
   line-height: 40px; }
 
 .h1 {
-  color: #f6d34b;
+  color: #ffc928;
   font-size: 48px;
   font-weight: 700;
   text-align: center; }
@@ -1645,8 +1646,8 @@ input[type="text"]:focus {
       .slider__item {
         padding-top: 150px; } }
     .slider__item__text {
-      max-width: 380px;
-      padding: 40px;
+      max-width: 450px;
+      padding: 30px 30px 20px 40px;
       border: 10px solid #ffc928;
       -webkit-border-radius: 10px;
               border-radius: 10px;
@@ -1655,13 +1656,16 @@ input[type="text"]:focus {
         .slider__item__text {
           max-width: none; } }
       .slider__item__text p {
-        font-size: 15px; }
+        font-size: 20px;
+        line-height: 28px;
+        letter-spacing: 0.2px; }
       .slider__item__text span {
         display: block;
-        margin-bottom: 10px;
-        font-size: 21px;
+        margin-bottom: 20px;
+        font-size: 24px;
         line-height: 28px;
-        font-weight: 800; }
+        font-weight: 700;
+        letter-spacing: 0.24px; }
       .slider__item__text_font {
         padding: 25px 20px 30px 25px;
         width: 620px;
@@ -2088,17 +2092,21 @@ input[type="text"]:focus {
   margin-bottom: 30px; }
 
 .filter__title {
-  font-size: 20px;
-  line-height: 22px;
+  font-size: 24px;
+  line-height: 24px;
+  letter-spacing: 0.24px;
   font-weight: bold;
   padding-right: 40px;
   margin-bottom: 20px; }
 
-.filter__item__name {
-  margin-top: 15px;
-  font-size: 15px;
-  line-height: 18px;
-  font-weight: bold; }
+.filter__item {
+  font-size: 18px; }
+  .filter__item__name {
+    margin-top: 15px;
+    line-height: 18px;
+    font-weight: bold; }
+  .filter__item__secect .cs-placeholder {
+    font-size: 18px; }
 
 .filter__button {
   margin-top: 20px; }
@@ -3171,8 +3179,7 @@ input[type="text"]:focus {
     -webkit-transform: skewY(20deg);
         -ms-transform: skewY(20deg);
             transform: skewY(20deg);
-    background-color: #ffc928;
-    opacity: .2; }
+    background-color: #fff6d3; }
   .background-page-category .block-left-middle {
     position: absolute;
     z-index: -2;
@@ -3183,8 +3190,7 @@ input[type="text"]:focus {
     -webkit-transform: skewY(20deg);
         -ms-transform: skewY(20deg);
             transform: skewY(20deg);
-    background-color: #ffc928;
-    opacity: .2; }
+    background-color: #fff6d3; }
   .background-page-category .cheese-left {
     position: absolute;
     z-index: -1;
@@ -3203,8 +3209,7 @@ input[type="text"]:focus {
     -webkit-transform: skewY(20deg);
         -ms-transform: skewY(20deg);
             transform: skewY(20deg);
-    background-color: #ffc928;
-    opacity: .2; }
+    background-color: #fff6d3; }
   .background-page-category .block-right {
     position: absolute;
     z-index: -2;
@@ -3215,8 +3220,7 @@ input[type="text"]:focus {
     -webkit-transform: skewY(20deg);
         -ms-transform: skewY(20deg);
             transform: skewY(20deg);
-    background-color: #ffc928;
-    opacity: .2; }
+    background-color: #fff6d3; }
   .background-page-category .cheese-right {
     position: absolute;
     z-index: -1;
@@ -3373,22 +3377,51 @@ input[type="text"]:focus {
     .block-product-img__carousel__item:hover {
       border: 2px solid #ffc928; }
   .block-product-img__carousel .arrows--next {
-    right: 2px; }
+    right: -2px; }
   .block-product-img__carousel .arrows--prev {
-    left: 0px; }
+    left: -5px; }
   .block-product-img__carousel .arrows {
+    fill: #fff;
+    z-index: 1; }
+    .block-product-img__carousel .arrows:hover {
+      fill: #ffc928; }
+  .block-product-img__carousel:before {
+    content: "";
     width: 32px;
     height: 100%;
     background-color: #000000;
-    opacity: 0.2;
+    opacity: 0.1;
     position: absolute;
     top: 0;
     bottom: 0;
+    left: 0;
     cursor: pointer;
     -webkit-transform: none;
         -ms-transform: none;
             transform: none;
-    z-index: 1; }
+    z-index: 1;
+    -webkit-border-top-left-radius: 10px;
+            border-top-left-radius: 10px;
+    -webkit-border-bottom-left-radius: 10px;
+            border-bottom-left-radius: 10px; }
+  .block-product-img__carousel:after {
+    content: "";
+    width: 32px;
+    height: 100%;
+    background-color: #000000;
+    opacity: 0.1;
+    position: absolute;
+    top: 0;
+    bottom: 0;
+    right: 3px;
+    cursor: pointer;
+    -webkit-transform: none;
+        -ms-transform: none;
+            transform: none;
+    -webkit-border-top-right-radius: 10px;
+            border-top-right-radius: 10px;
+    -webkit-border-bottom-right-radius: 10px;
+            border-bottom-right-radius: 10px; }
 
 .block-product-img__description {
   font-weight: 600;
@@ -3695,8 +3728,7 @@ input[type="text"]:focus {
     -webkit-transform: skewY(20deg);
         -ms-transform: skewY(20deg);
             transform: skewY(20deg);
-    background-color: #ffc928;
-    opacity: .2; }
+    background-color: #fff6d3; }
   .background-page-product .block-left-middle {
     position: absolute;
     z-index: -2;
@@ -3707,8 +3739,7 @@ input[type="text"]:focus {
     -webkit-transform: skewY(20deg);
         -ms-transform: skewY(20deg);
             transform: skewY(20deg);
-    background-color: #ffc928;
-    opacity: .2; }
+    background-color: #fff6d3; }
   .background-page-product .block-left-bottom {
     position: absolute;
     z-index: -2;
@@ -3719,8 +3750,7 @@ input[type="text"]:focus {
     -webkit-transform: skewY(20deg);
         -ms-transform: skewY(20deg);
             transform: skewY(20deg);
-    background-color: #ffc928;
-    opacity: .2; }
+    background-color: #fff6d3; }
   .background-page-product .block-right {
     position: absolute;
     z-index: -2;
@@ -3731,8 +3761,7 @@ input[type="text"]:focus {
     -webkit-transform: skewY(20deg);
         -ms-transform: skewY(20deg);
             transform: skewY(20deg);
-    background-color: #ffc928;
-    opacity: .2; }
+    background-color: #fff6d3; }
   .background-page-product .cheese-right {
     position: absolute;
     z-index: -1;
@@ -3780,10 +3809,10 @@ input[type="text"]:focus {
       .trade-marks__item {
         width: 50%; } }
     .trade-marks__item__card {
-      height: 125px;
+      height: 180px;
       position: relative; }
       .trade-marks__item__card__img {
-        height: 90px;
+        height: 150px;
         position: relative; }
         .trade-marks__item__card__img img {
           position: absolute;
@@ -3791,7 +3820,8 @@ input[type="text"]:focus {
           left: 50%;
           -webkit-transform: translate(-50%, -50%);
               -ms-transform: translate(-50%, -50%);
-                  transform: translate(-50%, -50%); }
+                  transform: translate(-50%, -50%);
+          width: 65%; }
       .trade-marks__item__card__title {
         font-size: 18px;
         position: absolute;
@@ -3921,8 +3951,7 @@ input[type="text"]:focus {
     -webkit-transform: skewY(20deg);
         -ms-transform: skewY(20deg);
             transform: skewY(20deg);
-    background-color: #ffc928;
-    opacity: .2; }
+    background-color: #fff6d3; }
   .background-page__block-left-top_about {
     position: absolute;
     z-index: -2;
@@ -3933,8 +3962,7 @@ input[type="text"]:focus {
     -webkit-transform: skewY(20deg);
         -ms-transform: skewY(20deg);
             transform: skewY(20deg);
-    background-color: #ffc928;
-    opacity: .2; }
+    background-color: #fff6d3; }
   .background-page__block-left-top_direction {
     position: absolute;
     z-index: -2;
@@ -3945,8 +3973,7 @@ input[type="text"]:focus {
     -webkit-transform: skewY(20deg);
         -ms-transform: skewY(20deg);
             transform: skewY(20deg);
-    background-color: #ffc928;
-    opacity: .2; }
+    background-color: #fff6d3; }
   .background-page__block-left-top_event {
     position: absolute;
     z-index: -1;
@@ -3957,8 +3984,7 @@ input[type="text"]:focus {
     -webkit-transform: skewY(20deg);
         -ms-transform: skewY(20deg);
             transform: skewY(20deg);
-    background-color: #ffc928;
-    opacity: .2; }
+    background-color: #fff6d3; }
   .background-page__block-left-top_exclusive {
     position: absolute;
     z-index: -1;
@@ -3969,8 +3995,7 @@ input[type="text"]:focus {
     -webkit-transform: skewY(20deg);
         -ms-transform: skewY(20deg);
             transform: skewY(20deg);
-    background-color: #ffc928;
-    opacity: .2; }
+    background-color: #fff6d3; }
   .background-page__block-left-top_recipe {
     position: absolute;
     z-index: -1;
@@ -3981,8 +4006,7 @@ input[type="text"]:focus {
     -webkit-transform: skewY(20deg);
         -ms-transform: skewY(20deg);
             transform: skewY(20deg);
-    background-color: #f6d34b;
-    opacity: .2; }
+    background-color: #fff6d3; }
   .background-page__block-left-top_one-recipe {
     position: absolute;
     z-index: -1;
@@ -3993,8 +4017,7 @@ input[type="text"]:focus {
     -webkit-transform: skewY(20deg);
         -ms-transform: skewY(20deg);
             transform: skewY(20deg);
-    background-color: #f6d34b;
-    opacity: .2; }
+    background-color: #fff6d3; }
   .background-page__block-left-middle-top_about {
     position: absolute;
     z-index: -2;
@@ -4005,8 +4028,7 @@ input[type="text"]:focus {
     -webkit-transform: skewY(20deg);
         -ms-transform: skewY(20deg);
             transform: skewY(20deg);
-    background-color: #ffc928;
-    opacity: .2; }
+    background-color: #fff6d3; }
   .background-page__block-left-middle_brand {
     position: absolute;
     z-index: -2;
@@ -4017,8 +4039,7 @@ input[type="text"]:focus {
     -webkit-transform: skewY(20deg);
         -ms-transform: skewY(20deg);
             transform: skewY(20deg);
-    background-color: #ffc928;
-    opacity: .2; }
+    background-color: #fff6d3; }
   .background-page__block-left-middle_about {
     position: absolute;
     z-index: -2;
@@ -4029,8 +4050,7 @@ input[type="text"]:focus {
     -webkit-transform: skewY(20deg);
         -ms-transform: skewY(20deg);
             transform: skewY(20deg);
-    background-color: #ffc928;
-    opacity: .2; }
+    background-color: #fff6d3; }
   .background-page__block-left-middle_direction {
     position: absolute;
     z-index: -2;
@@ -4041,8 +4061,7 @@ input[type="text"]:focus {
     -webkit-transform: skewY(20deg);
         -ms-transform: skewY(20deg);
             transform: skewY(20deg);
-    background-color: #ffc928;
-    opacity: .2; }
+    background-color: #fff6d3; }
   .background-page__block-left-middle_event {
     position: absolute;
     z-index: -1;
@@ -4053,8 +4072,7 @@ input[type="text"]:focus {
     -webkit-transform: skewY(20deg);
         -ms-transform: skewY(20deg);
             transform: skewY(20deg);
-    background-color: #ffc928;
-    opacity: .2; }
+    background-color: #fff6d3; }
   .background-page__block-left-middle_exclusive {
     position: absolute;
     z-index: -1;
@@ -4065,8 +4083,7 @@ input[type="text"]:focus {
     -webkit-transform: skewY(20deg);
         -ms-transform: skewY(20deg);
             transform: skewY(20deg);
-    background-color: #ffc928;
-    opacity: .2; }
+    background-color: #fff6d3; }
   .background-page__block-left-middle_recipe {
     position: absolute;
     z-index: -1;
@@ -4077,8 +4094,7 @@ input[type="text"]:focus {
     -webkit-transform: skewY(20deg);
         -ms-transform: skewY(20deg);
             transform: skewY(20deg);
-    background-color: #f6d34b;
-    opacity: .2; }
+    background-color: #fff6d3; }
   .background-page__block-left-middle_one-recipe {
     position: absolute;
     z-index: -1;
@@ -4089,8 +4105,7 @@ input[type="text"]:focus {
     -webkit-transform: skewY(20deg);
         -ms-transform: skewY(20deg);
             transform: skewY(20deg);
-    background-color: #f6d34b;
-    opacity: .2; }
+    background-color: #fff6d3; }
   .background-page__block-left-middle-bottom_about {
     position: absolute;
     z-index: -2;
@@ -4101,8 +4116,7 @@ input[type="text"]:focus {
     -webkit-transform: skewY(20deg);
         -ms-transform: skewY(20deg);
             transform: skewY(20deg);
-    background-color: #ffc928;
-    opacity: .2; }
+    background-color: #fff6d3; }
   .background-page__block-left-bottom_about {
     position: absolute;
     z-index: -2;
@@ -4113,8 +4127,7 @@ input[type="text"]:focus {
     -webkit-transform: skewY(20deg);
         -ms-transform: skewY(20deg);
             transform: skewY(20deg);
-    background-color: #ffc928;
-    opacity: .2; }
+    background-color: #fff6d3; }
   .background-page__block-left-bottom_direction {
     position: absolute;
     z-index: -2;
@@ -4125,8 +4138,7 @@ input[type="text"]:focus {
     -webkit-transform: skewY(20deg);
         -ms-transform: skewY(20deg);
             transform: skewY(20deg);
-    background-color: #ffc928;
-    opacity: .2; }
+    background-color: #fff6d3; }
   .background-page__block-left-bottom_event {
     position: absolute;
     z-index: -2;
@@ -4137,8 +4149,7 @@ input[type="text"]:focus {
     -webkit-transform: skewY(20deg);
         -ms-transform: skewY(20deg);
             transform: skewY(20deg);
-    background-color: #ffc928;
-    opacity: .2; }
+    background-color: #fff6d3; }
   .background-page__block-right_brand {
     position: absolute;
     z-index: -2;
@@ -4149,8 +4160,7 @@ input[type="text"]:focus {
     -webkit-transform: skewY(20deg);
         -ms-transform: skewY(20deg);
             transform: skewY(20deg);
-    background-color: #ffc928;
-    opacity: .2; }
+    background-color: #fff6d3; }
   .background-page__block-right-top_about {
     position: absolute;
     z-index: -2;
@@ -4161,8 +4171,7 @@ input[type="text"]:focus {
     -webkit-transform: skewY(20deg);
         -ms-transform: skewY(20deg);
             transform: skewY(20deg);
-    background-color: #ffc928;
-    opacity: .2; }
+    background-color: #fff6d3; }
   .background-page__block-right-top_direction {
     position: absolute;
     z-index: -2;
@@ -4173,8 +4182,7 @@ input[type="text"]:focus {
     -webkit-transform: skewY(20deg);
         -ms-transform: skewY(20deg);
             transform: skewY(20deg);
-    background-color: #ffc928;
-    opacity: .2; }
+    background-color: #fff6d3; }
   .background-page__block-right-top_event {
     position: absolute;
     z-index: -2;
@@ -4185,8 +4193,7 @@ input[type="text"]:focus {
     -webkit-transform: skewY(20deg);
         -ms-transform: skewY(20deg);
             transform: skewY(20deg);
-    background-color: #ffc928;
-    opacity: .2; }
+    background-color: #fff6d3; }
   .background-page__block-right-top_exclusive {
     position: absolute;
     z-index: -2;
@@ -4197,8 +4204,7 @@ input[type="text"]:focus {
     -webkit-transform: skewY(20deg);
         -ms-transform: skewY(20deg);
             transform: skewY(20deg);
-    background-color: #ffc928;
-    opacity: .2; }
+    background-color: #fff6d3; }
   .background-page__block-right-top_recipe {
     position: absolute;
     z-index: -2;
@@ -4209,8 +4215,7 @@ input[type="text"]:focus {
     -webkit-transform: skewY(20deg);
         -ms-transform: skewY(20deg);
             transform: skewY(20deg);
-    background-color: #f6d34b;
-    opacity: .2; }
+    background-color: #fff6d3; }
   .background-page__block-right-middle_about {
     position: absolute;
     z-index: -2;
@@ -4221,8 +4226,7 @@ input[type="text"]:focus {
     -webkit-transform: skewY(20deg);
         -ms-transform: skewY(20deg);
             transform: skewY(20deg);
-    background-color: #ffc928;
-    opacity: .2; }
+    background-color: #fff6d3; }
   .background-page__block-right-bottom_about {
     position: absolute;
     z-index: -2;
@@ -4233,8 +4237,7 @@ input[type="text"]:focus {
     -webkit-transform: skewY(20deg);
         -ms-transform: skewY(20deg);
             transform: skewY(20deg);
-    background-color: #ffc928;
-    opacity: .2; }
+    background-color: #fff6d3; }
   .background-page__cheese-right_brand {
     position: absolute;
     z-index: -1;
