--- a/_frontend/blocks/tm-carousel/style.scss
+++ b/_frontend/blocks/tm-carousel/style.scss
@@ -33,6 +33,10 @@
         &_mb-120 {
             margin-bottom: 120px;
         }
+        &_catalog {
+            padding-top: 40px;
+            margin-bottom: 140px;
+        }
         &__carousel {
             padding-top: 10px;
             &:before,
