--- a/_frontend/blocks/background-page/style.scss
+++ b/_frontend/blocks/background-page/style.scss
@@ -515,6 +515,7 @@
         width: 100%;
         height: 434px;
         background: url('../images/background/top.png') no-repeat center;
+        background-size: cover;
     }
     &__bottom {
         position: absolute;
