--- a/_frontend/blocks/popular/style.scss
+++ b/_frontend/blocks/popular/style.scss
@@ -96,7 +96,7 @@
         display: block;
         top: 150px;
         position: absolute;
-        z-index: -1;
+        z-index: 0;
         width: 500px;
         height: 2px;
         background: #ffc928;
@@ -109,5 +109,6 @@
     }
 
     .arrows {
-        top: 150px;}
+        top: 150px;
+    }
 }
