--- a/_frontend/blocks/structure-company/style.scss
+++ b/_frontend/blocks/structure-company/style.scss
@@ -46,6 +46,7 @@
         height: 117px;
         overflow: hidden;
         margin-bottom: 20px;
+        cursor: pointer;
         img {
             width: 117px;
             height: 117px;
@@ -61,6 +62,17 @@
             img {
                 width: 150px;
                 height: 130px;
+            }
+        }
+        &_hover {
+            display: none!important;
+        }
+        &:hover & {
+            &_over {
+                display: none;
+            }
+            &_hover {
+                display: inline-block!important;
             }
         }
     }
@@ -88,6 +100,13 @@
         }
         &__p-mb {
             margin-bottom: 40px;
+        }
+    }
+    &_catalog {
+        margin-top: 75px;
+        margin-bottom: 15px;
+        @include media(xl) {
+            margin-top: 0;
         }
     }
 }
