--- a/_frontend/blocks/background-page/style.scss
+++ b/_frontend/blocks/background-page/style.scss
@@ -171,7 +171,7 @@
         }
         &_exclusive {
             position: absolute;
-            z-index: -1;
+            z-index: -2;
             left: 0px;
             top: 335px;
             width: 34%;
@@ -191,7 +191,7 @@
         }
         &_one-recipe {
             position: absolute;
-            z-index: -1;
+            z-index: -2;
             left: 0px;
             top: 650px;
             width: 32%;
@@ -526,5 +526,6 @@
         width: 100%;
         height: 540px;
         background: url('../images/background/bottom.png') no-repeat center;
+        background-size: cover;
     }
 }
