--- a/css/style.css
+++ b/css/style.css
@@ -4110,7 +4110,7 @@ input[type="text"]:focus {
     background-color: #fff6d3; }
   .background-page__block-left-top_exclusive {
     position: absolute;
-    z-index: -1;
+    z-index: -2;
     left: 0px;
     top: 335px;
     width: 34%;
@@ -4132,7 +4132,7 @@ input[type="text"]:focus {
     background-color: #fff6d3; }
   .background-page__block-left-top_one-recipe {
     position: absolute;
-    z-index: -1;
+    z-index: -2;
     left: 0px;
     top: 650px;
     width: 32%;
@@ -4457,7 +4457,9 @@ input[type="text"]:focus {
     z-index: -1;
     width: 100%;
     height: 540px;
-    background: url("../images/background/bottom.png") no-repeat center; }
+    background: url("../images/background/bottom.png") no-repeat center;
+    -webkit-background-size: cover;
+            background-size: cover; }
 
 .text-brand {
   font-size: 18px;
