contacts and routs

--- a/_frontend/blocks/style.scss
+++ b/_frontend/blocks/style.scss
@@ -47,4 +47,6 @@
 @import "one-recipe/style";
 @import "text-one-recipe/style";
 @import "photo-product-recipe/style";
-@import "photo-product-recipe/style";
+@import "route/style";
+@import "contacts/style";
+@import "map/style";
