--- a/_frontend/blocks/cheese/style.sass
+++ b/_frontend/blocks/cheese/style.sass
@@ -6,6 +6,8 @@
 
 	&__product
 		display: none
+		position: relative
+		clear: both
 		&.active
 			display: block
 
@@ -173,7 +175,7 @@ $width: 1000px
 		left: auto
 		width: 100%
 		height: auto
-		margin-top: 150px
+		margin-left: 14px
 		text-align: center
 
 	.bg,
