--- a/_frontend/blocks/filter/style.scss
+++ b/_frontend/blocks/filter/style.scss
@@ -22,7 +22,9 @@
     }
     &__button {
         margin-top: 25px;
-
+        @include media(md) {
+            text-align: center;
+        }
         & .button-orange span {
             padding: 0 46px;
         }
